force-app/main/default/objects/Program_Partner_Membership__c/Program_Partner_Membership__c.object-meta.xml
<CustomObject>
    <label>Program Partner Membership</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Program Partner Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Partner Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>