force-app/main/default/objects/Program_Partner_Membership__c/fields/AEO_State__c.field-meta.xml
<CustomField>
    <fullName>AEO_State__c</fullName>
    <description>The unencoded aeo_state variable that is used to create the RESILI link using this formula: https://resili.aeoworks.org/business-health-assessment/?aeo_state=btoa(aeo_state)</description>
    <formula>&apos;{&quot;aeo_cohort_id&quot;:&quot;&apos; &amp;  Cohort__c &amp;  &apos;&quot;,&quot;aeo_program_id&quot;:&quot;&apos; &amp;  Program__c &amp; &apos;&quot;}&apos;</formula>
    <label>AEO State</label>
    <type>Text</type>
</CustomField>