force-app/main/default/objects/Program_Partner_Membership__c/fields/Bitly_Link_to_Post_Coaching_Survey__c.field-meta.xml
<CustomField>
    <fullName>Bitly_Link_to_Post_Coaching_Survey__c</fullName>
    <description>The Pardot redirect link with encoded program id and cohort id url parameters that is provided to members of a cohort when it is time for them to take the post-coaching survey. Available in the portal.</description>
    <inlineHelpText>Paste the result from Pardot redirect into this field.</inlineHelpText>
    <label>Bitly Link to Post-Coaching Survey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>