force-app/main/default/objects/Program_Partner_Membership__c/fields/Bitly_Link_To_Resili__c.field-meta.xml
<CustomField>
    <fullName>Bitly_Link_To_Resili__c</fullName>
    <description>The bitly link that we provide to entrepreneurs to signup for RESILI.  Uses the aeo_state field in this formula and then turn into a bitly link using Pardot redirect. Redirects to here: https://resili.aeoworks.org/business-health-assessment/?aeo_state=btoa(aeo_state)</description>
    <inlineHelpText>Enter the bitly link from the Pardot redirect here.</inlineHelpText>
    <label>Bitly Link To Resili</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>