force-app/main/default/objects/Program_Partner_Membership__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Program_Partner_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>