force-app/main/default/objects/Program_Partner_Membership__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Program_Partner_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>